// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component Of type long text should render snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root MuiBox-root-19"
    >
      <form
        data-testid="textForm"
      >
        <div
          class="MuiBox-root MuiBox-root-20"
        >
          <div
            class="makeStyles-root-21"
          >
            <div
              class="MuiTypography-root makeStyles-question-22 MuiTypography-h4"
            >
              <strong>
                test title
              </strong>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-24"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated"
            for="test name"
          >
            long text input label
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-multiline MuiInput-multiline"
            max="Infinity"
            min="0"
          >
            <textarea
              class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline MuiInput-inputMultiline"
              id="test name"
              name="test name"
              placeholder="long text input placeholder"
              rows="5"
            />
          </div>
          <div
            class="MuiBox-root MuiBox-root-25"
          >
            <span>
               10 words Remaining 
            </span>
          </div>
          <div />
        </div>
        <div />
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text Component of type Email should render snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root MuiBox-root-61"
    >
      <form
        data-testid="textForm"
      >
        <div
          class="MuiBox-root MuiBox-root-62"
        >
          <div
            class="makeStyles-root-63"
          >
            <div
              class="MuiTypography-root makeStyles-question-64 MuiTypography-h4"
            >
              <strong>
                test title
              </strong>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-66"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated"
            for="test name"
          >
            Email text input label
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
            max="Infinity"
            min="0"
          >
            <input
              class="MuiInputBase-input MuiInput-input"
              id="test name"
              name="test name"
              placeholder="Email text input placeholder"
              rows="1"
              type="email"
              value=""
            />
          </div>
          <div />
        </div>
        <div />
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text Component of type Number should render snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root MuiBox-root-79"
    >
      <form
        data-testid="textForm"
      >
        <div
          class="MuiBox-root MuiBox-root-80"
        >
          <div
            class="makeStyles-root-81"
          >
            <div
              class="MuiTypography-root makeStyles-question-82 MuiTypography-h4"
            >
              <strong>
                test title
              </strong>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-84"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated"
            for="test name"
          >
            number input label
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
            max="Infinity"
            min="0"
          >
            <input
              class="MuiInputBase-input MuiInput-input"
              id="test name"
              name="test name"
              placeholder="number input placeholder"
              rows="1"
              type="number"
              value=""
            />
          </div>
          <div />
        </div>
        <div />
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text Component of type short text should render snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root MuiBox-root-1"
    >
      <form
        data-testid="textForm"
      >
        <div
          class="MuiBox-root MuiBox-root-2"
        >
          <div
            class="makeStyles-root-3"
          >
            <div
              class="MuiTypography-root makeStyles-question-4 MuiTypography-h4"
            >
              <strong>
                test title
              </strong>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-6"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated"
            for="test name"
          >
            short text input label
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
            max="Infinity"
            min="0"
          >
            <input
              class="MuiInputBase-input MuiInput-input"
              id="test name"
              name="test name"
              placeholder="short text input placeholder"
              rows="1"
              type="text"
              value=""
            />
          </div>
          <div />
        </div>
        <div />
      </form>
    </div>
  </div>
</DocumentFragment>
`;
